# av_study

./: .gitignore
0_hello_ffmpeg/: CMakeLists.txt
0_hello_ffmpeg/include/: encode_pcm_to_mp2.h  encode_yuv_to_h264.h  output_log.h  vPlayer_sdl2.h
0_hello_ffmpeg/note/: base.md  server.md
0_hello_ffmpeg/src/: encode_audio_test.cpp  encode_pcm_to_mp2.cpp  encode_video_test.cpp  encode_yuv_to_h264.cpp  output_log.cpp  player_entry.cpp  test.cpp  vPlayer_sdl2.cpp
1_rtsp_server/: CMakeLists.txt
1_rtsp_server/include/: connection.h  logger.h  rtp.h  rtsp_base.h  send_aac.h  send_h264.h
1_rtsp_server/note/: RTSP协议.md
1_rtsp_server/src/: connection.cpp  main.cpp  main_aac.cpp  main_av.cpp  main_h264.cpp  main_off.cpp  rtp.cpp  rtsp_aac.cpp  rtsp_av.cpp  rtsp_base.cpp  rtsp_h264.cpp  send_aac.cpp  send_h264.cpp
2_rtsp_server/: CMakeLists.txt
2_rtsp_server/header/scheduler/: Event.h  Poller.h
2_rtsp_server/include/base/: Logger.h  Version.h
2_rtsp_server/include/live/: AACFileMediaSource.h  AACFileSink.h  Buffer.h  H264FileMediaSource.h  H264FileSink.h  InetAddress.h  MediaSession.h  MediaSessionManager.h  MediaSource.h  Rtp.h  RtpInstance.h  RtspConnection.h  RtspServer.h  Sink.h  TcpConnection.h
2_rtsp_server/include/scheduler/: Event.h  EventScheduler.h  SelectPoller.h  SocketsOps.h  Thread.h  ThreadPool.h  Timer.h  UsageEnvironment.h
2_rtsp_server/note/: note.md
2_rtsp_server/src/: main.cpp
2_rtsp_server/src/live/: AACFileMediaSource.cpp  AACFileSink.cpp  Buffer.cpp  H264FileMediaSource.cpp  H264FileSink.cpp  InetAddress.cpp  MediaSession.cpp  MediaSessionManager.cpp  MediaSource.cpp  Rtp.cpp  RtspConnection.cpp  RtspServer.cpp  Sink.cpp  TcpConnection.cpp
2_rtsp_server/src/my_way/: ObjectComposition_test.cpp  a.h  b.h  c.h  enum_test.cpp  file_test.cpp  map_test.cpp  static_test.cpp  static_test.h  string_test.cpp  test.cpp  vector_test.cpp  virtual_test.cpp
2_rtsp_server/src/scheduler/: Event.cpp  EventScheduler.cpp  Poller.cpp  SelectPoller.cpp  SocketsOps.cpp  Thread.cpp  ThreadPool.cpp  Timer.cpp  UsageEnvironment.cpp
3_concurrent_test_tool/: CMakeLists.txt
3_concurrent_test_tool/include/: Common.h  FFmpegDecoder.h
3_concurrent_test_tool/note/: note.md
3_concurrent_test_tool/src/: FFmpegDecoder.cpp  main.cpp
